# memclinger

./: .gitignore  Makefile.am  NEWS  README.md  configure.ac
src/: Makefile.am  memclinger.c  memclinger.h
